feat: add seo tags

--- a/theme/index.ejs
+++ b/theme/index.ejs
@@ -2,8 +2,50 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>Brian Douglas</title>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+
+    <!-- Title -->
+    <title>Brian Douglas' Tech Blog - JavaScript Tutorials & Web Development</title>
+
+    <!-- Meta Description -->
+    <meta name="description" content="Explore Brian Douglas' tech blog where he shares JavaScript tutorials, web development tips, and cool projects he builds on the web. Learn, build, and stay updated on the latest web technologies.">
+
+    <!-- Keywords -->
+    <meta name="keywords" content="Brian Douglas, tech blog, JavaScript tutorials, web development, frontend development, programming, cool web projects, coding tips, developer blog, web technologies">
+
+    <!-- Author -->
+    <meta name="author" content="Brian Douglas">
+
+    <!-- Open Graph / Facebook -->
+    <meta property="og:type" content="website">
+    <meta property="og:title" content="Brian Douglas' Tech Blog - JavaScript & Web Development">
+    <meta property="og:description" content="Learn JavaScript, web development, and discover cool web projects created by Brian Douglas, a passionate JavaScript programmer.">
+    <meta property="og:url" content="https://www.briandouglas.ie">
+<!--    <meta property="og:image" content="https://www.briandouglas.ie/og-image.jpg">-->
+    <meta property="og:site_name" content="Brian Douglas' Tech Blog">
+
+    <!-- Twitter Meta -->
+    <meta name="twitter:card" content="summary_large_image">
+    <meta name="twitter:title" content="Brian Douglas' Tech Blog - JavaScript & Web Development">
+    <meta name="twitter:description" content="Stay updated with Brian Douglas' blog, where he shares JavaScript tutorials, cool projects, and web development tips.">
+<!--    <meta name="twitter:image" content="https://www.briandouglas.ie/twitter-image.jpg">-->
+    <meta name="twitter:site" content="@BrianDouglasIE">
+
+    <!-- Canonical URL -->
+    <link rel="canonical" href="https://www.briandouglas.ie">
+
+    <!-- Favicon (Optional) -->
+    <link rel="icon" href="https://www.briandouglas.ie/favicon.ico" type="image/x-icon">
+
+    <!-- Robots -->
+    <meta name="robots" content="index, follow">
+
+    <!-- Favicon-->
+    <link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png">
+    <link rel="icon" type="image/png" sizes="32x32" href="/favicon-32x32.png">
+    <link rel="icon" type="image/png" sizes="16x16" href="/favicon-16x16.png">
+    <link rel="manifest" href="/site.webmanifest">
 
     <link rel="stylesheet" href="/styles/external/pure.min.css">
     <link rel="stylesheet" href="/styles/external/pure-grid.min.css">
