feat: add images

--- a/theme/index.ejs
+++ b/theme/index.ejs
@@ -22,14 +22,14 @@
     <meta property="og:title" content="Brian Douglas' Tech Blog - JavaScript & Web Development">
     <meta property="og:description" content="Learn JavaScript, web development, and discover cool web projects created by Brian Douglas, a passionate JavaScript programmer.">
     <meta property="og:url" content="https://www.briandouglas.ie">
-<!--    <meta property="og:image" content="https://www.briandouglas.ie/og-image.jpg">-->
+    <meta property="og:image" content="https://www.briandouglas.ie/images/open-graph-index.png">
     <meta property="og:site_name" content="Brian Douglas' Tech Blog">
 
     <!-- Twitter Meta -->
     <meta name="twitter:card" content="summary_large_image">
     <meta name="twitter:title" content="Brian Douglas' Tech Blog - JavaScript & Web Development">
     <meta name="twitter:description" content="Stay updated with Brian Douglas' blog, where he shares JavaScript tutorials, cool projects, and web development tips.">
-<!--    <meta name="twitter:image" content="https://www.briandouglas.ie/twitter-image.jpg">-->
+    <meta name="twitter:image" content="https://www.briandouglas.ie/images/open-graph-index.png">
     <meta name="twitter:site" content="@BrianDouglasIE">
 
     <!-- Canonical URL -->
