--- a/theme/templates/post.ejs
+++ b/theme/templates/post.ejs
@@ -24,7 +24,7 @@
     <meta property="og:description"
           content="<%= post.data.title %>">
     <meta property="og:url" content="https://www.briandouglas.ie">
-    <meta property="og:image" content="https://www.briandouglas.ie/images/open-graph-index.png">
+    <meta property="og:image" content="https://www.briandouglas.ie/images/og-images/<%= post.slug %>.png">
     <meta property="og:site_name" content="Brian Douglas' Tech Blog">
 
     <!-- Twitter Meta -->
@@ -32,7 +32,7 @@
     <meta name="twitter:title" content="Brian Douglas' Tech Blog - <%= post.data.title %>">
     <meta name="twitter:description"
           content="<%= post.data.title %>">
-    <meta name="twitter:image" content="https://www.briandouglas.ie/images/open-graph-index.png">
+    <meta name="twitter:image" content="https://www.briandouglas.ie/images/og-images/<%= post.slug %>.png">
     <meta name="twitter:site" content="@BrianDouglasIE">
 
     <!-- Canonical URL -->
