--- a/theme/templates/post.ejs
+++ b/theme/templates/post.ejs
@@ -27,7 +27,7 @@
     <meta property="og:image" content="https://www.briandouglas.ie/images/og-images<%= post.slug %>.png">
     <meta property="og:site_name" content="Brian Douglas' Tech Blog">
 
-    <!-- Twitter Meta -->s
+    <!-- Twitter Meta -->
     <meta name="twitter:card" content="summary_large_image">
     <meta name="twitter:title" content="Brian Douglas' Tech Blog - <%= post.data.title %>">
     <meta name="twitter:description"
