--- a/theme/templates/post.ejs
+++ b/theme/templates/post.ejs
@@ -76,7 +76,7 @@
                         by Brian
                     </p>
                 </header>
-                <p class="post-content"><%- post.html %></p>
+                <div class="post-content"><%- post.html %></div>
                 <footer>
                     <p>Until next time,</p>
                     <p>— Brian</p>
