--- a/theme/templates/includes/post-list.ejs
+++ b/theme/templates/includes/post-list.ejs
@@ -1,5 +1,5 @@
 <div class="container">
-    <ul class="reset-list">
+    <ul class="reset-list post-list">
         <% posts.forEach(post => { %>
             <li>
                 <%- include('post-list-item', { post }); %>
