--- a/theme/assets/styles/main.css
+++ b/theme/assets/styles/main.css
@@ -124,7 +124,7 @@ main {
     background: var(--gray-200);
 }
 
-.quote {
+blockquote {
     background-color: var(--gray-100);
     border-left: 5px solid var(--gray-200);
     padding: 1rem;
@@ -132,11 +132,11 @@ main {
     font-style: italic;
 }
 
-.quote p {
+blockquote p {
     margin: 0;
 }
 
-.quote footer {
+blockquote footer {
     text-align: right;
     font-size: 0.9rem;
     margin-top: 0.5rem;
