--- a/theme/templates/includes/site-footer.ejs
+++ b/theme/templates/includes/site-footer.ejs
@@ -1,5 +1,8 @@
-<footer class="site-footer">
-    <div class="container">
-        <p>Since <%= helpers.formatDate('04/08/2023') %>. All words by Brian Douglas.</p>
+<footer class="site-footer gray-bg">
+    <div class="content-md mx-auto px-sm">
+        <p class="my-auto py-sm">
+            Since <%= helpers.formatDate('04/08/2023') %>. All words by Brian
+            Douglas.
+        </p>
     </div>
 </footer>
