--- a/theme/templates/includes/site-header.ejs
+++ b/theme/templates/includes/site-header.ejs
@@ -1,7 +1,5 @@
 <header class="site-header">
-    <nav class="container">
-        <ul class="reset-list">
-            <li><a href="/" class="reset-a"><h1 class="m-0">Brian Douglas</h1></a></li>
-        </ul>
-    </nav>
+    <div class="content-md mx-auto px-sm">
+        <h1 class="m-0">Brian Douglas</h1>
+    </div>
 </header>
