--- a/theme/templates/includes/post-list-brief.ejs
+++ b/theme/templates/includes/post-list-brief.ejs
@@ -1,7 +1,7 @@
 <ul class="list-reset content-md mx-auto post-list">
     <% posts.forEach(post => { %>
     <li>
-        <%- include('post-list-item', { post }); %>
+        <%- include('post-list-brief-item', { post }); %>
     </li>
     <% }) %>
 </ul>
