feat: update styles

--- a/theme/index.ejs
+++ b/theme/index.ejs
@@ -94,6 +94,7 @@
         <%- include('stylesheets') %>
     </head>
     <body class="m-0">
+        <div class="wrap content-md mx-auto">
         <%- include('site-header') %>
         <main>
             <div class="gray-bg m-0 py-md px-sm">
@@ -120,5 +121,6 @@
             </div>
         </main>
         <%- include('site-footer') %>
+        </div>
     </body>
 </html>
