--- a/theme/templates/post.ejs
+++ b/theme/templates/post.ejs
@@ -83,6 +83,7 @@
         <%- include('stylesheets') %>
     </head>
     <body class="m-0">
+        <div class="wrap content-md mx-auto">
         <%- include('site-header') %>
         <div class="breadcrumbs">
             <nav aria-label="Breadcrumb" class="content-md mx-auto px-sm">
@@ -111,6 +112,7 @@
             </div>
         </main>
         <%- include('site-footer') %>
+        </div>
         <script src="/scripts/chicken-and-magpie.js"></script>
     </body>
 </html>
