--- a/theme/assets/styles/briandouglas.ie.css
+++ b/theme/assets/styles/briandouglas.ie.css
@@ -409,3 +409,13 @@ time {
   fill: white;
   vertical-align: middle;
 }
+
+body {
+  background: hsl(0, 0%, 96%);
+}
+
+.wrap {
+  background: white;
+  border-left: 1px solid hsl(0, 0%, 92%);
+  border-right: 1px solid hsl(0, 0%, 92%);
+}
