feat: update quote

--- a/theme/index.ejs
+++ b/theme/index.ejs
@@ -102,12 +102,8 @@
 
                 <div class="content-md mx-auto my-auto">
                     <blockquote>
-                        <p>
-                            when you don't create things, you become defined by
-                            your tastes rather than ability. your tastes only
-                            narrow & exclude people. so create.
-                        </p>
-                        <footer>— _why the lucky stiff</footer>
+                        <p>Progress is our path, complexity builds the bridge, simplicity waits.</p>
+                        <footer>— DHH, Rails World 2024</footer>
                     </blockquote>
                 </div>
             </div>
