--- a/theme/index.ejs
+++ b/theme/index.ejs
@@ -1,115 +1,80 @@
 <!DOCTYPE html>
 <html lang="en" class="Robyn">
-    <head>
-        <meta charset="UTF-8" />
-        <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-        <meta http-equiv="X-UA-Compatible" content="IE=edge" />
 
-        <!-- Title -->
-        <title>
-            Brian Douglas' Tech Blog - JavaScript Tutorials & Web Development
-        </title>
+<head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
 
-        <!-- Meta Description -->
-        <meta
-            name="description"
-            content="Explore Brian Douglas' tech blog where he shares JavaScript tutorials, web development tips, and cool projects he builds on the web. Learn, build, and stay updated on the latest web technologies."
-        />
+    <!-- Title -->
+    <title>
+        BrianDouglas.ie - JavaScript Tutorials & Web Development
+    </title>
 
-        <!-- Keywords -->
-        <meta
-            name="keywords"
-            content="Brian Douglas, tech blog, JavaScript tutorials, web development, frontend development, programming, cool web projects, coding tips, developer blog, web technologies"
-        />
+    <!-- Meta Description -->
+    <meta name="description"
+        content="Explore BrianDouglas.ie where he shares JavaScript tutorials, web development tips, and cool projects he builds on the web. Learn, build, and stay updated on the latest web technologies." />
 
-        <!-- Author -->
-        <meta name="author" content="Brian Douglas" />
+    <!-- Keywords -->
+    <meta name="keywords"
+        content="Brian Douglas, tech blog, JavaScript tutorials, web development, frontend development, programming, cool web projects, coding tips, developer blog, web technologies" />
 
-        <!-- Open Graph / Facebook -->
-        <meta property="og:type" content="website" />
-        <meta
-            property="og:title"
-            content="Brian Douglas' Tech Blog - JavaScript & Web Development"
-        />
-        <meta
-            property="og:description"
-            content="Learn JavaScript, web development, and discover cool web projects created by Brian Douglas, a passionate JavaScript programmer."
-        />
-        <meta property="og:url" content="https://www.briandouglas.ie" />
-        <meta
-            property="og:image"
-            content="https://www.briandouglas.ie/images/open-graph-index.png"
-        />
-        <meta property="og:site_name" content="Brian Douglas' Tech Blog" />
+    <!-- Author -->
+    <meta name="author" content="Brian Douglas" />
 
-        <!-- Twitter Meta -->
-        <meta name="twitter:card" content="summary_large_image" />
-        <meta
-            name="twitter:title"
-            content="Brian Douglas' Tech Blog - JavaScript & Web Development"
-        />
-        <meta
-            name="twitter:description"
-            content="Stay updated with Brian Douglas' blog, where he shares JavaScript tutorials, cool projects, and web development tips."
-        />
-        <meta
-            name="twitter:image"
-            content="https://www.briandouglas.ie/images/open-graph-index.png"
-        />
-        <meta name="twitter:site" content="@BrianDouglasIE" />
+    <!-- Open Graph / Facebook -->
+    <meta property="og:type" content="website" />
+    <meta property="og:title" content="BrianDouglas.ie - JavaScript & Web Development" />
+    <meta property="og:description"
+        content="Learn JavaScript, web development, and discover cool web projects created by Brian Douglas, a passionate JavaScript programmer." />
+    <meta property="og:url" content="https://www.briandouglas.ie" />
+    <meta property="og:image" content="https://www.briandouglas.ie/images/open-graph-index.png" />
+    <meta property="og:site_name" content="BrianDouglas.ie" />
 
-        <!-- Canonical URL -->
-        <link rel="canonical" href="https://www.briandouglas.ie" />
+    <!-- Twitter Meta -->
+    <meta name="twitter:card" content="summary_large_image" />
+    <meta name="twitter:title" content="BrianDouglas.ie - JavaScript & Web Development" />
+    <meta name="twitter:description"
+        content="Stay updated with Brian Douglas' blog, where he shares JavaScript tutorials, cool projects, and web development tips." />
+    <meta name="twitter:image" content="https://www.briandouglas.ie/images/open-graph-index.png" />
+    <meta name="twitter:site" content="@BrianDouglasIE" />
 
-        <!-- Favicon (Optional) -->
-        <link
-            rel="icon"
-            href="https://www.briandouglas.ie/favicon.ico"
-            type="image/x-icon"
-        />
+    <!-- Canonical URL -->
+    <link rel="canonical" href="https://www.briandouglas.ie" />
 
-        <!-- Robots -->
-        <meta name="robots" content="index, follow" />
+    <!-- Favicon (Optional) -->
+    <link rel="icon" href="https://www.briandouglas.ie/favicon.ico" type="image/x-icon" />
 
-        <!-- Favicon-->
-        <link
-            rel="apple-touch-icon"
-            sizes="180x180"
-            href="/apple-touch-icon.png"
-        />
-        <link
-            rel="icon"
-            type="image/png"
-            sizes="32x32"
-            href="/favicon-32x32.png"
-        />
-        <link
-            rel="icon"
-            type="image/png"
-            sizes="16x16"
-            href="/favicon-16x16.png"
-        />
-        <link rel="manifest" href="/site.webmanifest" />
+    <!-- Robots -->
+    <meta name="robots" content="index, follow" />
 
-        <%- include('stylesheets') %>
-    </head>
-    <body class="m-0">
-        <div class="wrap content-md mx-auto">
+    <!-- Favicon-->
+    <link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png" />
+    <link rel="icon" type="image/png" sizes="32x32" href="/favicon-32x32.png" />
+    <link rel="icon" type="image/png" sizes="16x16" href="/favicon-16x16.png" />
+    <link rel="manifest" href="/site.webmanifest" />
+
+    <%- include('stylesheets') %>
+</head>
+
+<body class="m-0">
+    <div class="wrap content-md mx-auto">
         <%- include('site-header') %>
-        <main>
-            <div class="gray-bg m-0 py-md px-sm">
-                <%- include('bio') %>
-            </div>
-            <div class="content-md mx-auto my-md px-sm">
-                <h2>Recent Posts</h2>
-                <hr />
-                <%- include('post-list', { posts: posts.slice(0, 3) }) %>
-                <h2>Older Posts</h2>
-                <hr />
-                <%- include('post-list-brief', { posts: posts.slice(3) }) %>
-            </div>
-        </main>
-        <%- include('site-footer') %>
-        </div>
-    </body>
+            <main>
+                <div class="gray-bg m-0 py-md px-sm">
+                    <%- include('bio') %>
+                </div>
+                <div class="content-md mx-auto my-md px-sm">
+                    <h2>Recent Posts</h2>
+                    <hr />
+                    <%- include('post-list', { posts: posts.slice(0, 3) }) %>
+                        <h2>Older Posts</h2>
+                        <hr />
+                        <%- include('post-list-brief', { posts: posts.slice(3) }) %>
+                </div>
+            </main>
+            <%- include('site-footer') %>
+    </div>
+</body>
+
 </html>
