--- a/theme/index.ejs
+++ b/theme/index.ejs
@@ -1,49 +1,70 @@
 <!DOCTYPE html>
 <html lang="en" class="Robyn">
-
-<head>
+  <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
 
     <!-- Title -->
-    <title>
-        BrianDouglas.ie - JavaScript Tutorials & Web Development
-    </title>
+    <title>BrianDouglas.ie - Mediocre Programming.</title>
 
     <!-- Meta Description -->
-    <meta name="description"
-        content="Explore BrianDouglas.ie where he shares JavaScript tutorials, web development tips, and cool projects he builds on the web. Learn, build, and stay updated on the latest web technologies." />
+    <meta
+      name="description"
+      content="It's a blog, a wannabe oldschool blog. I write about programming, thing's I've learned whilst programming, and hopefully, some useful code."
+    />
 
     <!-- Keywords -->
-    <meta name="keywords"
-        content="Brian Douglas, tech blog, JavaScript tutorials, web development, frontend development, programming, cool web projects, coding tips, developer blog, web technologies" />
+    <meta
+      name="keywords"
+      content="Brian Douglas, JavaScript, PHP, web development, programming, laravel, developer blog, web technologies"
+    />
 
     <!-- Author -->
     <meta name="author" content="Brian Douglas" />
 
     <!-- Open Graph / Facebook -->
     <meta property="og:type" content="website" />
-    <meta property="og:title" content="BrianDouglas.ie - JavaScript & Web Development" />
-    <meta property="og:description"
-        content="Learn JavaScript, web development, and discover cool web projects created by Brian Douglas, a passionate JavaScript programmer." />
+    <meta
+      property="og:title"
+      content="BrianDouglas.ie - Mediocre Programming."
+    />
+    <meta
+      property="og:description"
+      content="It's a blog, a wannabe oldschool blog. I write about programming, thing's I've learned whilst programming, and also some useful code snippets."
+    />
     <meta property="og:url" content="https://www.briandouglas.ie" />
-    <meta property="og:image" content="http://www.briandouglas.ie/images/open-graph-index.png" />
+    <meta
+      property="og:image"
+      content="http://www.briandouglas.ie/images/open-graph-index.png"
+    />
     <meta property="og:site_name" content="BrianDouglas.ie" />
 
     <!-- Twitter Meta -->
     <meta name="twitter:card" content="summary_large_image" />
-    <meta name="twitter:title" content="BrianDouglas.ie - JavaScript & Web Development" />
-    <meta name="twitter:description"
-        content="Stay updated with Brian Douglas' blog, where he shares JavaScript tutorials, cool projects, and web development tips." />
-    <meta name="twitter:image" content="http://www.briandouglas.ie/images/open-graph-index.png" />
+    <meta
+      name="twitter:title"
+      content="BrianDouglas.ie - Mediocre Programming."
+    />
+    <meta
+      name="twitter:description"
+      content="It's a blog, a wannabe oldschool blog. I write about programming, thing's I've learned whilst programming, and also some useful code snippets."
+    />
+    <meta
+      name="twitter:image"
+      content="http://www.briandouglas.ie/images/open-graph-index.png"
+    />
     <meta name="twitter:site" content="@BrianDouglasIE" />
 
     <!-- Canonical URL -->
     <link rel="canonical" href="https://www.briandouglas.ie" />
 
     <!-- Favicon (Optional) -->
-    <link rel="icon" href="https://www.briandouglas.ie/favicon.ico" type="image/x-icon" />
+    <link
+      rel="icon"
+      href="https://www.briandouglas.ie/favicon.ico"
+      type="image/x-icon"
+    />
 
     <!-- Robots -->
     <meta name="robots" content="index, follow" />
@@ -55,26 +76,23 @@
     <link rel="manifest" href="/site.webmanifest" />
 
     <%- include('stylesheets') %>
-</head>
+  </head>
 
-<body class="m-0">
+  <body class="m-0">
     <div class="wrap content-md mx-auto">
-        <%- include('site-header') %>
-            <main>
-                <div class="gray-bg m-0 py-md px-sm">
-                    <%- include('bio') %>
-                </div>
-                <div class="content-md mx-auto my-md px-sm">
-                    <h2>Recent Posts</h2>
-                    <hr />
-                    <%- include('post-list', { posts: posts.slice(0, 3) }) %>
-                        <h2>Older Posts</h2>
-                        <hr />
-                        <%- include('post-list-brief', { posts: posts.slice(3) }) %>
-                </div>
-            </main>
-            <%- include('site-footer') %>
+      <%- include('site-header') %>
+      <main>
+        <div class="gray-bg m-0 py-md px-sm"><%- include('bio') %></div>
+        <div class="content-md mx-auto my-md px-sm">
+          <h2>Recent Posts</h2>
+          <hr />
+          <%- include('post-list', { posts: posts.slice(0, 3) }) %>
+          <h2>Older Posts</h2>
+          <hr />
+          <%- include('post-list-brief', { posts: posts.slice(3) }) %>
+        </div>
+      </main>
+      <%- include('site-footer') %>
     </div>
-</body>
-
+  </body>
 </html>
