--- a/theme/templates/post.ejs
+++ b/theme/templates/post.ejs
@@ -93,6 +93,7 @@
             <%- include('site-footer') %>
     </div>
     <script src="/scripts/chicken-and-magpie.js"></script>
+    <script src="/scripts/main.js"></script>
 </body>
 
 </html>
