--- a/theme/index.ejs
+++ b/theme/index.ejs
@@ -95,5 +95,6 @@
       <%- include('site-footer') %>
     </div>
     <script src="/scripts/main.js"></script>
+    <%- include('analytics') %>
   </body>
 </html>
