--- a/theme/templates/post.ejs
+++ b/theme/templates/post.ejs
@@ -94,6 +94,7 @@
     </div>
     <script src="/scripts/chicken-and-magpie.js"></script>
     <script src="/scripts/main.js"></script>
+    <%- include('analytics') %>
 </body>
 
 </html>
