feat: add comment link

--- a/docs/styles/briandouglas.ie.css
+++ b/docs/styles/briandouglas.ie.css
@@ -299,8 +299,12 @@
     color: #fff;
 }
 
-.site-header .social-links a ~ a {
+.site-header .social-links a~a {
     margin-left: 16px;
+}
+
+small {
+    font-size: .85rem;
 }
 
 .gray-bg {
