--- a/theme/templates/includes/site-footer.ejs
+++ b/theme/templates/includes/site-footer.ejs
@@ -1,8 +1,8 @@
 <footer class="site-footer gray-bg">
     <div class="content-md mx-auto px-sm">
         <p class="my-auto py-sm">
-            Since <%= helpers.formatDate('04/08/2023') %>. All words by Brian
-            Douglas.
+            <small>Since <%= helpers.formatDate('04/08/2023') %>. All words by Brian
+                    Douglas. <a href="mailto:brianwdouglas@proton.me">Have a comment?</a></small>
         </p>
     </div>
 </footer>
