--- a/theme/templates/post.ejs
+++ b/theme/templates/post.ejs
@@ -92,6 +92,7 @@
             </main>
             <%- include('site-footer') %>
     </div>
+    <script src="/scripts/skip-to-section.js"></script>
     <script src="/scripts/chicken-and-magpie.js"></script>
     <script src="/scripts/main.js"></script>
 </body>
