feat: I write python

--- a/views/index.html
+++ b/views/index.html
@@ -89,7 +89,7 @@
             </p>
             <p>
                 I've been paid to program for ${new Date().getFullYear() - 2012} years.
-                People have paid me to write SQL, Java, PHP, C, and JavaScript.
+                People have paid me to write SQL, Java, Python, PHP, C, and JavaScript.
                 Which is ridiculous as it's just my hobby. I love to code.
             </p>
         </div>
